--- a/Site Vitrine/index.html
+++ b/Site Vitrine/index.html
@@ -67,7 +67,7 @@
 					<a href="#contact"><i class="fa fa-phone-square"></i> Nous travaillons avec</a>
 				</li>
 				<li>
-					<a href="https://niko3141.000webhostapp.com/index.php"><i class="fab fa-blogger"></i> Blog</a>
+					<a href="https://niko3141.000webhostapp.com/index.php" target="_blank"><i class="fab fa-blogger"></i> Blog</a>
 				</li>
 			</ul>
 		</nav>
@@ -189,21 +189,21 @@
 					<div class="row">
 						<div class="col-sm-4 blog-post">
 							<img src="assets/images/locametre.png">
-							<a href="#"><h2>AG LOCAMÈTRE</h2></a>
+							<a href="https://niko3141.000webhostapp.com/index.php"><h2>AG LOCAMÈTRE</h2></a>
 							<div class="date">10 février 2018</div>
 							<p>17:06 Écrit par SYNDICAT DES LOCATAIRES TEL: 02/522 98 69 dans ACTIONS, LOCAMÈTRE | </p>
 							<a href="https://niko3141.000webhostapp.com/index.php" target="_blank">Read More</a>
 						</div>
 						<div class="col-sm-4 blog-post">
 							<img src="assets/images/cour.png">
-							<a href="#"><h2>COURS DE FORMATION CALCUL DU LOYER DANS LES LOGEMENTS SOCIAUX</h2></a>
+							<a href="https://niko3141.000webhostapp.com/index.php"><h2>COURS DE FORMATION CALCUL DU LOYER DANS LES LOGEMENTS SOCIAUX</h2></a>
 							<div class="date">15 janvier 2018</div>
 							<p>12:51 Écrit par SYNDICAT DES LOCATAIRES TEL: 02/522 98 69 dans COURS DE FORMATION | </p>
 							<a href="https://niko3141.000webhostapp.com/index.php" target="_blank">Read More</a>
 						</div>
 						<div class="col-sm-4 blog-post">
 							<img src="assets/images/lephare.png">
-							<a href="#"><h2>LE PHARE N°132</h2></a>
+							<a href="https://niko3141.000webhostapp.com/index.php"><h2>LE PHARE N°132</h2></a>
 							<div class="date">06 janvier 2018</div>
 							<p>12:40 Écrit par SYNDICAT DES LOCATAIRES TEL: 02/522 98 69 dans LE PHARE | </p>
 							<a href="https://niko3141.000webhostapp.com/index.php" target="_blank">Read More</a>
